--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bytes": "^3.1.0",
     "debounce-fn": "^4.0.0",
     "formik": "^2.1.4",
+    "fuse.js": "^6.2.0",
     "js-yaml": "^3.14.0",
     "linaria": "^1.3.3",
     "localforage": "^1.7.4",
@@ -40,6 +41,7 @@
     "p-queue": "^6.4.0",
     "p-wait-for": "^3.1.0",
     "polished": "^3.6.5",
+    "query-string": "^6.13.1",
     "ramda": "^0.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -61,7 +63,6 @@
     "@types/bytes": "^3.1.0",
     "@types/copy-webpack-plugin": "^6.0.0",
     "@types/friendly-errors-webpack-plugin": "^0.1.1",
-    "@types/fuzzy-search": "^2.1.0",
     "@types/html-webpack-plugin": "^3.2.3",
     "@types/jest": "^26.0.0",
     "@types/jquery": "^3.3.38",
@@ -86,7 +87,6 @@
     "favicons-webpack-plugin": "^3.0.1",
     "file-loader": "^6.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
-    "fuzzy-search": "^3.2.1",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
     "json-loader": "^0.5.7",
