--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "jsx": "react",
-    "lib": ["DOM"],
+    "lib": ["DOM", "es2020"],
     "paths": {"*": ["*", "src/*"]}
   }
 }
