--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,8 @@
     "jsx": "react",
     "lib": ["DOM", "es2020"],
     "paths": {"*": ["*", "src/*"]},
+    "plugins": [
+      {"name": "typescript-styled-plugin"}
+    ]
   }
 }
